# osmium-protos

./: .gitmodules  README.md  pyproject.toml
.github/: ci-cd.yml
.github/workflows/: python-package.yml
osmium_protos/: __init__.py  auth_pb2.py  auth_pb2.pyi  billing_pb2.py  billing_pb2.pyi  chats_pb2.py  chats_pb2.pyi  communities_pb2.py  communities_pb2.pyi  core_pb2.py  core_pb2.pyi  discovery_pb2.py  discovery_pb2.pyi  friends_pb2.py  friends_pb2.pyi  media_pb2.py  media_pb2.pyi  messages_pb2.py  messages_pb2.pyi  reactions_pb2.py  reactions_pb2.pyi  refs_pb2.py  refs_pb2.pyi  settings_pb2.py  settings_pb2.pyi  stickers_pb2.py  stickers_pb2.pyi  types_pb2.py  types_pb2.pyi  unwrap.py  updates_pb2.py  updates_pb2.pyi  users_pb2.py  users_pb2.pyi  voice_pb2.py  voice_pb2.pyi  wrap.py
osmium_protos/osmium/client/auth/: __init__.py
osmium_protos/osmium/client/billing/: __init__.py
osmium_protos/osmium/client/chats/: __init__.py
osmium_protos/osmium/client/communities/: __init__.py
osmium_protos/osmium/client/core/: __init__.py
osmium_protos/osmium/client/discovery/: __init__.py
osmium_protos/osmium/client/friends/: __init__.py
osmium_protos/osmium/client/media/: __init__.py
osmium_protos/osmium/client/messages/: __init__.py
osmium_protos/osmium/client/reactions/: __init__.py
osmium_protos/osmium/client/refs/: __init__.py
osmium_protos/osmium/client/settings/: __init__.py
osmium_protos/osmium/client/stickers/: __init__.py
osmium_protos/osmium/client/types/: __init__.py
scripts/: compile.sh  gen_pb_aliases.py
(+3 files in other folders)
