[project]
name = "osmium-protos"
version = "1.0.0"
description = "Python compiled Osmium protos package."
readme = "README.md"
requires-python = ">=3.13,<4.0"
license = "MIT"
authors = [{ name = "abigail phoebe", email = "abigail@phoebe.sh" }]
dependencies = ["protobuf (>=7.35.0,<8.0.0)"]

[project.urls]
Homepage = "https://github.com/ijsbol/osmium-protos"
"Bug Tracker" = "https://github.com/ijsbol/osmium-protos/issues"

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "ruff (>=0.15.15)",
    "twine (>=6.2.0,<7.0.0)",
    "build (>=1.4.0,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "taskipy (>=1.14.1)",
]

[tool.poetry]
include = ["osmium_protos/py.typed"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "ruff format . && isort ."

[tool.ruff.lint]
select = ["COM812"]

[tool.ruff.format]
skip-magic-trailing-comma = false
